# hysds

./: .flake8  .gitignore  .pre-commit-config.yaml  .project  CHANGELOG.md  CLAUDE.md  COMPLETE_MIGRATION_SUMMARY.md  CONTRIBUTING.md  COPYING  LICENSE  LOCK_CONFIG_CHANGES.md  MIGRATION_SUMMARY.md  README.md  archived_history.txt  dev-requirements.in  hysds.code-workspace  pyproject.toml  requirements-py312.txt  requirements.in  requirements.txt  setup.cfg  setup.py  terraform.tfstate  update_requirements.sh  ~
.circleci/: config.yml
.claude/: settings.local.json
.claude/implementations/: phase1_job_spec_and_core_detection.md  phase2_stac_processing_grq_records.md  phase3_error_handling_production.md
.github/workflows/: publish.yml
configs/celery/: celeryconfig.py.tmpl
configs/datasets/: datasets.json
configs/logstash/: event_status.template  indexer.conf.metrics  indexer.conf.mozart  indexer.conf.verdi  job_status.template  sdswatch_client-pcm.conf  sdswatch_client.conf  task_status.template  worker_status.template
configs/orchestrator/: orchestrator_datasets.json  orchestrator_jobs.json
configs/supervisor/: supervisord.conf.factotum  supervisord.conf.grq  supervisord.conf.metrics  supervisord.conf.mozart  supervisord.conf.verdi
configs/worker/: job_worker.json.import_prov_es  job_worker.json.notify_dataset_by_email  job_worker.json.notify_dataset_by_email-factotum  job_worker.json.notify_job_by_email  job_worker.json.notify_job_by_email-factotum  job_worker.json.notify_job_by_tweet  job_worker.json.notify_job_by_tweet-factotum  job_worker.json.queue_router_job  job_worker.json.queue_router_job-factotum  job_worker.json.retry_job  job_worker.json.retry_job-factotum  job_worker.json.user_tagger-job
hysds/: __init__.py  _context.json  _job.json  celery.py  container_utils.py  dataset_ingest.py  dataset_ingest_bulk.py  dataset_ingest_multi.py  es_util.py  es_util_async.py  event_processors.py  job_worker.py  localize.py  lock.py  log_utils.py  orchestrator.py  publish_lock.py  recognize.py  stac_processor.py  task_worker.py  triage.py  user_rules_dataset.py  user_rules_job.py  utils.py
hysds/containers/: base.py  docker.py  factory.py  podman.py  run_job2.py
hysds/deprecated/: user_rules_job.py
hysds/pymonitoredrunner/: KombuMessenger.py  MessagingThread.py  MonitoredRunner.py  StreamObserverFileWriter.py  StreamObserverQueue.py  StreamReaderProcess.py  StreamSubject.py
hysds/worker/: base.py  run_job2.py
scripts/: add_asg_target_tracking.sh  add_spot_fleet_target_tracking.sh  cancel_all_queues.sh  check_csk_job.py  check_job_periodicity.py  check_queue_periodicity.py  check_queue_periodicity_job_status.py  clean_and_audit_ifg.py  clean_and_audit_redis_for_slings.py  clean_and_audit_slings.py  clean_dead_running_jobs.py  clean_es_cluster.py  clean_event_status_indexes.sh  clean_failed_cooperate_datasets.py  clean_failed_dav_no_clobber_datasets.py  clean_failed_jobs.sh  clean_failed_s3_no_clobber_datasets.py  clean_failed_s3_no_clobber_datasets_add_tag.py  clean_failed_s3_no_clobber_datasets_tag_jobs_for_requeue.py  clean_failed_s3_orbit_ingests.py  clean_indices_from_alias.py  clean_job_spec_container_indexes.sh  clean_job_status_indexes.py  clean_job_status_indexes.sh  clean_logstash_indexes.sh  clean_mozart_indexes.sh  clean_old_queued_jobs.py  clean_old_running_jobs.py  clean_queued_jobs.sh  clean_running_jobs.sh  clean_task_status_indexes.sh  clean_worker_status_indexes.sh  get_redis_info.py  harikiri.py  harikiri_sqs.py  ingest_dataset.py  ingest_dataset.sh  install_ilm_policy.py  install_job_status_template.py  install_job_status_template.sh  (+20 more)
scripts/job_creators/: utils.py  utils_job.py
scripts/purge_no_head_objects/: purge_no_head_objects.py  purge_old_slcs.py  util.py
test/: README_LOCK_TESTS.md  test_container_utils.py  test_docker_container_utils.py  test_event_processors.py  test_exceptions.py  test_job_worker.py  test_lock.py  test_log_utils.py  test_offline_orphaned_jobs.py  test_packaging.py  test_preprocessing_checksum.py  test_queues.py  test_stac_error_handling.py  test_stac_phase1_core.py  test_stac_processor.py  test_triage.py  test_user_rules.py  test_utils.py  test_version.py  test_watchdog_job_timeouts.py
test/examples/: _docker_stats.json
test/examples/AOI_sacramento_valley/: AOI_sacramento_valley.dataset.json  AOI_sacramento_valley.met.json
test/integration/: test_opensearch_3x_integration.py
(+3 files in other folders)
