[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hysds-core"
dynamic = ["version"]
description = "HySDS core distributed job execution engine"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.12"
authors = [
    {name = "HySDS", email = "hysds-help@jpl.nasa.gov"}
]
keywords = ["hysds", "science", "data", "processing", "distributed", "celery"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Operating System :: MacOS :: MacOS X",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    # HySDS sibling packages - using >=7.0a0 to accept pre-releases (RC, alpha, beta)
    "hysds-osaka>=7.0a0,<8.0",
    "hysds-prov-es>=7.0a0,<8.0",
    "hysds-commons>=7.0a0,<8.0",
    
    # Core dependencies - matching original setup.py order and pins
    "redis~=5.2",  # Relaxed from ==5.2.1 per migration spec
    "celery>=5.3.1,<6.0.0",
    "prompt-toolkit>=3.0,<4.0",  # Upgraded from ==1.0.18 per migration spec
    "requests>=2.31.0",
    "flower>=2.0.1",
    "eventlet>=0.33.3",
    "easywebdav>=1.2.0",
    "lxml>=3.4.0,<5.0.0",
    "httplib2>=0.9",
    "gevent>=1.1.1,<25.4.1",
    "psutil>=5.8.0",
    "filechunkio>=1.6.0",
    "boto>=2.38.0",
    "msgpack>=1.0.0",
    "awscli>=1.17.1",
    "boto3>=1.11.1",
    "backoff>=1.3.1",
    "protobuf>=3.1.0.post1",
    "google-cloud>=0.22.0",
    "google-cloud-monitoring>=0.22.0",
    "atomicwrites>=1.1.5",
    "greenlet>=0.4.15",
    "fab-classic>=1.19.2",
    "pytz",
    "tabulate>=0.8.6",
    "pyyaml",
    "pottery",
]

[project.optional-dependencies]
test = [
    "pytest>=7.2.0",
    "fakeredis>=2.20.0",
    "freezegun>=1.4.0",
    "pytest-mock>=3.11.1",
    "pytest-cov>=4.1.0",
]

dev = [
    "hysds-core[test]",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.12.11",
    "types-redis>=4.5.7.3",
    "typing-extensions>=4.7.1",
    "pre-commit>=3.3.3",
    "build>=0.10.0",
    "twine>=4.0.2",
]

[project.urls]
Homepage = "https://github.com/hysds/hysds"
Documentation = "https://hysds.github.io/hysds"
Repository = "https://github.com/hysds/hysds"
Issues = "https://github.com/hysds/hysds/issues"
Changelog = "https://github.com/hysds/hysds/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
raw-options = {version_scheme = "no-guess-dev"}

[tool.hatch.build.targets.wheel]
packages = ["hysds"]

[tool.hatch.build.targets.sdist]
include = [
    "/hysds",
    "/configs",
    "/scripts",
    "/test",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

# Tool configurations migrated from setup.cfg

[tool.pytest.ini_options]
testpaths = ["test"]
norecursedirs = [".eggs", ".git", "_build", "tmp*", "third_party"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
skip_glob = [".git", "__pycache__", ".tox", ".eggs", "build", "dist"]
known_first_party = ["hysds"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true

[tool.coverage.run]
source = ["hysds"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/version.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "raise ImportError",
    "if __name__ == .__main__.:",
    "pass",
    "raise",
]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
per-file-ignores = [
    "__init__.py:F401,F403",
    "test/*.py:F401,F403,F811,F841",
]
